@@ -1,4 +1,5 @@
 27/08/09:
+  - Added overwrite of profile and level of AVC streams when adding tracks in mp4box(from ISOFF or .264). Use ":profile=X" and ":level=Z" when importing
   - Fixed chapters and text tracks handling for iTunes. Using the -ipd option in MP4Box should fix all subtitles tracks.
     When adding a track (including subtitle), it is now possible to override the track layout. For example:
       MP4Box -add test.srt:layout=0x20x0x-1 test.mp4
